# fluxion-rs

./: .gitignore  Cargo.toml  build_errors.txt  sandbox_save.scene
assets/scripts/: spinner.js
assets/shaders/: bloom_blur.wgsl  bloom_bright.wgsl  bloom_composite.wgsl  debug_lines.wgsl  dof.wgsl  fullscreen.vert.wgsl  geometry.frag.wgsl  geometry.vert.wgsl  particles.wgsl  pbr_lighting.wgsl  shadow_depth.wgsl  skinned_geometry.vert.wgsl  skybox.wgsl  ssao.wgsl  ssao_blur.wgsl  tonemap.wgsl
assets/types/: components.d.ts  engine.d.ts
crates/fluxion-audio/: Cargo.toml
crates/fluxion-audio/src/: lib.rs  rune_module.rs
crates/fluxion-core/: Cargo.toml
crates/fluxion-core/src/: color.rs  debug_draw.rs  editor_prefs.rs  lib.rs  project.rs  reflect.rs  reflect_impls.rs  registry.rs
crates/fluxion-core/src/assets/: database.rs  mod.rs
crates/fluxion-core/src/components/: animation_system.rs  animator.rs  audio_source.rs  camera.rs  camera_controller.rs  camera_manager.rs  csg.rs  environment.rs  light.rs  lod.rs  mesh_renderer.rs  mod.rs  particle_emitter.rs  physics_material.rs  rigid_body.rs  script_behaviour.rs
crates/fluxion-core/src/ecs/: component.rs  entity.rs  mod.rs  world.rs
crates/fluxion-core/src/event/: mod.rs
crates/fluxion-core/src/facade/: mod.rs
crates/fluxion-core/src/hierarchy/: mod.rs
crates/fluxion-core/src/input/: mod.rs
crates/fluxion-core/src/particles/: mod.rs
crates/fluxion-core/src/scene/: deserialize_world.rs  mod.rs  prefab.rs
crates/fluxion-core/src/templates/: installer.rs  mod.rs  registry.rs  templates.rs
crates/fluxion-core/src/time/: mod.rs
crates/fluxion-core/src/transform/: mod.rs  system.rs
crates/fluxion-editor/: Cargo.toml  build.rs
crates/fluxion-editor/scripts/: assets.rn  console.rn  debugger.rn  editor_camera.rn  environment.rn  hierarchy.rn  inspector.rn  menubar.rn  settings.rn  toolbar.rn  viewport.rn
crates/fluxion-editor/src/: dock.rs  host.rs  icons.rs  lsp_manager.rs  main.rs  project_chooser.rs  script_editor.rs  theme.rs  toolbar.rs  ui_shell.rs  undo.rs  viewport_gizmo.rs
crates/fluxion-editor/src/rune_bindings/: camera_module.rs  environment_module.rs  gameplay_module.rs  gizmo_module.rs  input_module.rs  mod.rs  physics_module.rs  settings_module.rs  ui_module.rs  viewport_module.rs  viewport_module_new.rs  world_module.rs
crates/fluxion-physics/: Cargo.toml
crates/fluxion-physics/src/: lib.rs  rune_module.rs
crates/fluxion-reflect-derive/: Cargo.toml
crates/fluxion-reflect-derive/src/: attrs.rs  codegen.rs  lib.rs
crates/fluxion-renderer/: Cargo.toml
crates/fluxion-renderer/src/: config.rs  csg.rs  lib.rs  renderer.rs
crates/fluxion-renderer/src/lighting/: mod.rs
crates/fluxion-renderer/src/material/: material_asset.rs  mod.rs  pbr.rs
crates/fluxion-renderer/src/mesh/: gltf_loader.rs  mod.rs  primitives.rs  skinned.rs
crates/fluxion-renderer/src/passes/: bloom.rs  debug_lines.rs  dof.rs  geometry.rs  lighting.rs  mod.rs  particles.rs  shadow.rs  skinned_geometry.rs  skybox.rs  ssao.rs  tonemap.rs
crates/fluxion-renderer/src/render_graph/: context.rs  mod.rs  pass.rs
crates/fluxion-renderer/src/shader/: library.rs  mod.rs
crates/fluxion-renderer/src/texture/: mod.rs
crates/fluxion-rune-lsp/: Cargo.toml
crates/fluxion-rune-lsp/src/: main.rs
crates/fluxion-rune-scripting/: Cargo.toml
crates/fluxion-rune-scripting/src/: auto_binding.rs  behaviour.rs  hot_reload.rs  lib.rs  prelude.rn  vm.rs
crates/fluxion-sandbox/: Cargo.toml
crates/fluxion-sandbox/assets/: demo_gltf.scene
crates/fluxion-sandbox/assets/scripts/: demo.rn  spinner.js  test_gameplay.rn
crates/fluxion-sandbox/src/: editor_shell.rs  egui_shell.rs  gamepad.rs  main.rs
crates/fluxion-scripting/: Cargo.toml
crates/fluxion-scripting/src/: auto_binding.rs  behaviour.rs  binding_registry.rs  bindings.rs  dts_export.rs  lib.rs  render_pass.rs  script_transform_sync.rs  vm.rs
crates/fluxion-scripting/src/api/: debug_api.rs  gameobject_api.rs  input_api.rs  mod.rs  physics_api.rs  time_api.rs  ui_api.rs  window_api.rs
crates/fluxion-scripting/src/vm/: mod.rs  native.rs  stub_wasm.rs
