[workspace]
members = [
    "crates/fluxion-reflect-derive",
    "crates/fluxion-core",
    "crates/fluxion-renderer",
    "crates/fluxion-scripting",
    "crates/fluxion-rune-scripting",
    "crates/fluxion-physics",
    "crates/fluxion-audio",
    "crates/fluxion-sandbox",
    "crates/fluxion-editor",
]
resolver = "2"

# Shared dependency versions for the whole workspace.
# Individual crates still opt-in via their own [dependencies] sections,
# but the version is declared once here to keep things consistent.
[workspace.dependencies]
glam        = { version = "0.28", features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
log         = "0.4"
bytemuck    = { version = "1", features = ["derive"] }
hecs        = "0.10"
lazy_static = "1"
wgpu        = { version = "22", features = ["wgsl"] }
winit       = "0.30"
image       = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rapier3d    = { version = "0.22", features = ["simd-stable"] }
cpal        = "0.15"
symphonia   = { version = "0.5", features = ["mp3", "ogg", "wav", "aac"] }
egui        = "0.29"
egui-wgpu   = "0.29"
egui-winit  = "0.29"
egui_dock   = "0.14"
dirs-next   = "2.0"
chrono      = { version = "0.4", features = ["clock"] }
rfd         = "0.15"
