[package]
name        = "fluxion-audio"
version     = "0.1.0"
edition     = "2021"
description = "Native audio via cpal; WASM should use a Web Audio bridge (not wired here)."

[dependencies]
anyhow    = { workspace = true }
log       = { workspace = true }
cpal      = { workspace = true }
symphonia = { workspace = true }

[dependencies.rune]
version  = "0.14"
optional = true

[features]
rune-scripting = ["rune"]
