[package]
name        = "fluxion-core"
version     = "0.1.0"
edition     = "2021"
description = "FluxionRS engine core — ECS, transforms, events, time. No rendering dependency, compiles to WASM."

[lib]
# rlib for native use; cdylib lets us build a .wasm module when targeting wasm32
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable the WASM entry-point and browser-friendly panic hook.
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
fluxion-reflect-derive = { path = "../fluxion-reflect-derive" }
glam       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
log        = { workspace = true }
hecs       = { workspace = true }

# WASM-only: js interop + panic hook
wasm-bindgen             = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
