[package]
name        = "fluxion-renderer"
version     = "0.1.0"
edition     = "2021"
description = "FluxionRS wgpu renderer — deferred PBR, post-processing, scriptable render graph."

[features]
default = []
# Build for WebGPU (modern browsers)
web-gpu = ["wgpu/webgpu"]
# Build for WebGL2 fallback (older browsers / Safari)
web-gl  = ["wgpu/webgl"]

[dependencies]
fluxion-core = { path = "../fluxion-core" }
glam         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
log          = { workspace = true }
bytemuck     = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }
image        = { workspace = true }

# async runtime: pollster blocks futures on native; wasm-bindgen-futures drives them on web
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
