[package]
name    = "fluxion-rune-scripting"
version = "0.1.0"
edition = "2021"
description = "FluxionRS Rune scripting VM with hot-reload support."

[dependencies]
fluxion-core = { path = "../fluxion-core" }
glam         = { workspace = true }
anyhow       = { workspace = true }
log          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rune   = "0.14"
notify = "6"
