[package]
name        = "fluxion-scripting"
version     = "0.1.0"
edition     = "2021"
description = "FluxionRS JS/TS scripting — QuickJS VM, FluxionBehaviour lifecycle, render graph bindings."

[features]
default = []

[dependencies]
fluxion-core     = { path = "../fluxion-core" }
fluxion-renderer = { path = "../fluxion-renderer" }
glam             = { workspace = true }
anyhow           = { workspace = true }
log              = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# QuickJS — not built for wasm32 (no rquickjs-sys prebuild); see `vm/stub_wasm.rs`.
rquickjs = { version = "0.8", features = ["loader", "rust-alloc", "macro"] }
